fix(notice): removed spacing on no icon (#1914)

--- a/src/less/page-notice/page-notice.less
+++ b/src/less/page-notice/page-notice.less
@@ -101,9 +101,13 @@ span[role="region"].page-notice {
 }
 
 .page-notice__main {
-    grid-column: 2;
+    grid-column: 1 / 3;
     grid-row: 1;
     padding-right: @spacing-200;
+}
+
+.page-notice__header + .page-notice__main {
+    grid-column: 2;
 }
 
 .page-notice__footer {
