--- a/src/less/section-notice/section-notice.less
+++ b/src/less/section-notice/section-notice.less
@@ -68,9 +68,13 @@ span[role="region"].section-notice {
 }
 
 .section-notice__main {
-    grid-column: 2;
+    grid-column: 1 / 3;
     grid-row: 1;
     padding-right: @spacing-200;
+}
+
+.section-notice__header + .section-notice__main {
+    grid-column: 2;
 }
 
 .section-notice__footer {
